--- a/source/index.html
+++ b/source/index.html
@@ -33,13 +33,14 @@
   <!-- <img src="/__spritemap#sprite-logo-view" alt="Это спрайт"> -->
   <header class="header opened" data-test="header">
     <div class="header__wrapper">
-      <nav class="header__nav nav nav--closed">
+      <nav class="header__nav nav">
         <button class="nav__toggle button" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <a class="header__logo">
           <img class="logo logo--header" src="img/images/logo/logo.svg" alt="Логотип" width="142" height="42">
         </a>
+        <a href="tel:88000000000" class="nav__phone">8 800 000-00-00</a>
         <ul class="nav__list">
           <li class="nav__list-item"><a class="nav__link" href="#">Туры</a></li>
           <li class="nav__list-item"><a class="nav__link" href="#">Обучение</a></li>
@@ -48,7 +49,6 @@
           <li class="nav__list-item"><a class="nav__link" href="#">Фотографии</a></li>
           <li class="nav__list-item"><a class="nav__link" href="#">Контакты</a></li>
         </ul>
-        <a href="tel:88000000000" class="nav__phone">8 800 000-00-00</a>
       </nav>
     </div>
   </header>
