--- a/source/index.html
+++ b/source/index.html
@@ -365,19 +365,23 @@
       </section>
     </div>
     <section class="about" data-test="about" id="about">
-      <picture>
-        <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/about/about-desktop@1x.webp 1x, img/images/about/about-desktop@2x.webp 2x" width="660" height="498">
-        <source media="(min-width: 768px)" type="image/webp" srcset="img/images/about/about-tablet@1x.webp 1x, img/images/about/about-tablet@2x.webp 2x" width="542" height="350">
-        <source type="image/webp" srcset="img/images/about/about-tablet@1x.webp 1x, img/images/about/about-tablet@2x.webp 2x" width="320" height="400">
-        <source media="(min-width: 1440px)" type="image/png" srcset="img/images/about/about-desktop@1x.png 1x, img/images/about/about-desktop@2x.png 2x" width="660" height="498">
-        <source media="(min-width: 768px)" type="image/png" srcset="img/images/about/about-tablet@1x.png 1x, img/images/about/about-tablet@2x.png 2x" width="542" height="350">
-        <img class="about__image" src="img/images/about/about-tablet@1x.png" srcset="img/images/about/about-tablet@2x.png 2x" width="320" height="400" alt="" loading="lazy">
-      </picture>
-      <h2>О нас</h2>
-      <h3>История компании</h3>
-      <p>В далёком 2000 году мы начали заниматься туризмом — походы, поездки, восхождения, нам это настолько понравилось, что мы этим стали жить. Спустя 5 лет, в 2005 году мы основали компанию, чтобы показывать людям удивительные места нашей страны.</p>
-      <h3>Наша цель</h3>
-      <p>Подарить вам незабываемые впечатления от похода в горы. Мы берём на себя все организационные вопросы. При организации мы обязательно учтём все ваши пожелания. Вам останется только наслаждаться незабываемым приключением в приятной компании.</p>
+      <div class="about__wrapper">
+        <picture>
+          <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/about/about-desktop@1x.webp 1x, img/images/about/about-desktop@2x.webp 2x" width="660" height="498">
+          <source type="image/webp" srcset="img/images/about/about-tablet@1x.webp 1x, img/images/about/about-tablet@2x.webp 2x" width="320" height="400">
+          <source media="(min-width: 1440px)" type="image/png" srcset="img/images/about/about-desktop@1x.png 1x, img/images/about/about-desktop@2x.png 2x" width="660" height="498">
+          <img class="about__image" src="img/images/about/about-tablet@1x.png" srcset="img/images/about/about-tablet@2x.png 2x" width="320" height="400" alt="" loading="lazy">
+        </picture>
+        <div class="about__text-wrapper">
+          <h2>О нас</h2>
+          <h3>История компании</h3>
+          <p>В далёком 2000 году мы начали заниматься туризмом — походы, поездки, восхождения, нам это настолько
+            понравилось, что мы этим стали жить. Спустя&nbsp;5 лет, в 2005 году мы основали компанию, чтобы показывать
+            людям удивительные места нашей страны.</p>
+          <h3>Наша цель</h3>
+          <p>Подарить вам незабываемые впечатления от похода в горы. Мы берём на себя все организационные вопросы. При организации мы обязательно учтём все ваши пожелания. Вам останется только наслаждаться незабываемым приключением в приятной компании.</p>
+        </div>
+      </div>
     </section>
     <section class="reviews" data-test="reviews" id="reviews">
       <div class="reviews__title-wrapper title-wrapper">
