--- a/source/index.html
+++ b/source/index.html
@@ -488,7 +488,7 @@
             <p>Предлагаем широкий выбор туров, отвечающих различным уровням мастерства и интересам. Мы также можем адаптировать маршруты к вашим конкретным потребностям и предпочтениям, чтобы вы получили индивидуальный опыт.</p>
           </li>
           <li class="advantages__item advantages__item--nature">
-            <h3>Бережное отношение к природе</h3>
+            <h3>Бережное отношение <br> к природе</h3>
             <p>Уделяем первостепенное внимание охране окружающей среды и гарантируем, что туры оказывают минимальное воздействие на природную среду. Наша компания следует принципу «Не оставлять следов».</p>
           </li>
         </ul>
@@ -498,6 +498,7 @@
         </div>
       </div>
     </section>
+
     <section class="gallery" data-test="gallery" id="gallery">
       <h2 class="gallery__title section-title">Фотогалерея</h2>
       <div class="gallery__text-wrapper title-wrapper">
