--- a/source/index.html
+++ b/source/index.html
@@ -470,31 +470,34 @@
     <section class="advantages" data-test="adv">
       <div class="advantages__wrapper content-wrapper">
         <h2 class="advantages__title section-title">Преимущества</h2>
-        <ul class="advantages__list">
-          <li class="advantages__item advantages__item--safety">
-            <h3>Безопасность</h3>
-            <p>Уделяем внимание безопасности клиентов, внедряя строгие процедуры и протоколы безопасности. Имеем планы действий на случай непредвиденных обстоятельств и даём гарантию полной безопасности во время всего тура.</p>
-          </li>
-          <li class="advantages__item advantages__item--expertise">
-            <h3>Экспертиза и знания</h3>
-            <p>Наша команда опытных гидов имеет обширные знания о местности, погодных условиях и технике безопасности. Это гарантирует, что наши клиенты находятся в надёжных руках и могут в полной мере насладиться опытом без опасений.</p>
-          </li>
-          <li class="advantages__item advantages__item--equipment">
-            <h3>Оборудование и снаряжение</h3>
-            <p>Мы предоставляем клиентам все необходимое оборудование, необходимое для путешествия. Это избавляет клиентов от необходимости покупать, брать с собой снаряжение, что делает путешествие более удобным и экономически выгодным.</p>
-          </li>
-          <li class="advantages__item advantages__item--routes">
-            <h3>Индивидуальные маршруты</h3>
-            <p>Предлагаем широкий выбор туров, отвечающих различным уровням мастерства и интересам. Мы также можем адаптировать маршруты к вашим конкретным потребностям и предпочтениям, чтобы вы получили индивидуальный опыт.</p>
-          </li>
-          <li class="advantages__item advantages__item--nature">
-            <h3>Бережное отношение <br> к природе</h3>
-            <p>Уделяем первостепенное внимание охране окружающей среды и гарантируем, что туры оказывают минимальное воздействие на природную среду. Наша компания следует принципу «Не оставлять следов».</p>
-          </li>
-        </ul>
+        <div class="advantages__swiper swiper">
+          <ul class="advantages__list swiper-wrapper">
+            <li class="advantages__item advantages__item--safety swiper-slide">
+              <h3>Безопасность</h3>
+              <p>Уделяем внимание безопасности клиентов, внедряя строгие процедуры и протоколы безопасности. Имеем планы действий на случай непредвиденных обстоятельств и даём гарантию полной безопасности во время всего тура.</p>
+            </li>
+            <li class="advantages__item advantages__item--expertise swiper-slide">
+              <h3>Экспертиза и знания</h3>
+              <p>Наша команда опытных гидов имеет обширные знания о местности, погодных условиях и технике безопасности. Это <br>гарантирует, что наши клиенты находятся в надёжных руках и могут в полной мере насладиться опытом без опасений.</p>
+            </li>
+            <li class="advantages__item advantages__item--equipment swiper-slide">
+              <h3>Оборудование и снаряжение</h3>
+              <p>Мы предоставляем клиентам все необходимое оборудование, необходимое для путешествия. Это избавляет клиентов от необходимости покупать, брать с собой снаряжение, что делает путешествие более удобным и экономически выгодным.</p>
+            </li>
+            <li class="advantages__item advantages__item--routes swiper-slide">
+              <h3>Индивидуальные маршруты</h3>
+              <p>Предлагаем широкий выбор туров, отвечающих различным уровням мастерства и интересам. Мы также можем адаптировать маршруты к вашим конкретным потребностям и предпочтениям, чтобы вы получили индивидуальный опыт.</p>
+            </li>
+            <li class="advantages__item advantages__item--nature swiper-slide">
+              <h3>Бережное отношение <br> к природе</h3>
+              <p>Уделяем первостепенное внимание охране окружающей среды и гарантируем, что туры оказывают минимальное воздействие на природную среду. Наша компания следует принципу «Не оставлять следов».</p>
+            </li>
+
+          </ul>
+        </div>
         <div class="advantages__buttons swiper-buttons">
-          <button class="swiper-button swiper-button--advantange-prev" type="button" aria-label="Предыдущий слайд"></button>
-          <button class="swiper-button swiper-button--advantange-next" type="button" aria-label="Следующий слайд"></button>
+          <button class="swiper-button swiper-button--prev swiper-button--advantage-prev" type="button" aria-label="Предыдущий слайд Преимуществ"></button>
+          <button class="swiper-button swiper-button--next swiper-button--advantage-next" type="button" aria-label="Следующий слайд Преимуществ"></button>
         </div>
       </div>
     </section>
